# shift-test

./: .env  README.md  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml
alembic/: env.py
alembic/db_migrations/: 1_init_db.sql  2_test_data.sql
alembic/versions/: a71a738c2829_init_migration.py
src/: main.py
src/modules/: database.py  exceptions.py
src/modules/auth/: router.py
src/modules/db_models/: models.py
src/modules/reservations/: router.py
src/modules/reservations/repository/: __init__.py  base_repository.py  file_repository.py  schema.py  sqlalchemy_repository.py
src/modules/rooms/: router.py
src/modules/rooms/repository/: __init__.py  base_repository.py  file_repository.py  schema.py  sqlalchemy_repository.py
src/modules/slots/: router.py
src/modules/slots/repository/: __init__.py  base_repository.py  file_repository.py  schema.py  sqlalchemy_repository.py
src/modules/users/: router.py
src/modules/users/repository/: __init__.py  base_repository.py  file_repository.py  schema.py  sqlalchemy_repository.py
tests/: conftest.py
tests/integration_tests/: test_endpoint_statuses.py
tests/mock_repositories/: rooms_repository.py
tests/unit_tests/: test_rooms.py
