[project]
name = "shift-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Miraellax", email = "93277512+Miraellax@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.poetry]
package-mode = false
#packages = [{include = "modules", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"